--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,32 +1,28 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Cortex Debug",
-      "cwd": "${workspaceRoot}",
-      "executable": "${command:cmake.launchTargetPath}",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "gdbPath": "gdb-multiarch",
-      "serverArgs": [
-        
-      ],
-      "device": "RP2040",
-      "configFiles": [
-        "interface/cmsis-dap.cfg",
-        "target/rp2040.cfg"
-        ],
-      "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
-      "runToEntryPoint": "main",
-      // Give restart the same functionality as runToEntryPoint - main
-      "postRestartCommands": [
-          "break main",
-          "continue"
-      ]
-    }
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Pico Debug",
+            "cwd": "${workspaceRoot}",
+            "executable": "${command:cmake.launchTargetPath}",
+            "request": "launch",
+            "type": "cortex-debug",
+            "servertype": "openocd",
+            // This may need to be "arm-none-eabi-gdb" for some previous builds
+            "gdbPath" : "gdb-multiarch",
+            "device": "RP2350",
+            "configFiles": [
+                // This may need to be "interface/picoprobe.cfg" for some previous builds
+                "interface/cmsis-dap.cfg",
+                "target/rp2350.cfg"
+            ],
+            "svdFile": "${env:PICO_SDK_PATH}/src/rp2350/hardware_regs/rp2350.svd",
+            "runToEntryPoint": "main",
+            // Work around for stopping at main on restart
+            "postRestartCommands": [
+                "break main",
+                "continue"
+            ]
+        }
+    ]
 }
